# icp_rust

./: .gitmodules  Cargo.toml  LICENSE  README.md  coverage.sh
.cargo/: config.toml
.github/workflows/: test.yml
examples/: scan2d.rs  scan3d.rs  scans.rs  velodyne.rs
scans/: 0.txt  005.txt  015.txt  022.txt  023.txt  024.txt  034.txt  036.txt  038.txt  041.txt  042.txt  048.txt  053.txt  056.txt  057.txt  060.txt  063.txt  068.txt  071.txt  081.txt  097.txt  098.txt  103.txt  105.txt  108.txt  111.txt  116.txt  118.txt  124.txt  127.txt  129.txt  13.txt  130.txt  131.txt  132.txt  134.txt  140.txt  144.txt  146.txt  16.txt  (+31 more)
scans/2d/: 001.txt  004.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  014.txt  018.txt  019.txt  021.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  033.txt  037.txt  043.txt  045.txt  046.txt  047.txt  049.txt  050.txt  051.txt  052.txt  054.txt  055.txt  058.txt  061.txt  062.txt  064.txt  069.txt  070.txt  072.txt  073.txt  074.txt  (+99 more)
src/: geometry.rs  huber.rs  kdtree.rs  lib.rs  linalg.rs  median.rs  norm.rs  se2.rs  so2.rs  stats.rs  transform.rs  types.rs
src/doc/: jacobian.rs  mod.rs
