[package]
name = "icp"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = []

[dependencies]
kiddo = "3.0.0"
nalgebra = "0.32.3"
num-traits = "0.2"

[dev-dependencies]
piston_window = "0.120.0"
hdf5 = "0.8.1"
ndarray = "0.15.6"

[dev-dependencies.plotters-piston]
git = "https://github.com/plotters-rs/plotters-piston.git"
rev = "7293411c"

[dev-dependencies.plotters]
version = "0.3.5"
git = "https://github.com/plotters-rs/plotters.git"
default_features = false
features = ["all_series"]
